[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
nom = "7.1.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
once_cell = "1.16.0"
petgraph = "0.6.2"
