[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
derive_more = "0.99.17"
itertools = "0.10.5"
nom = "7.1.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
once_cell = "1.16.0"
petgraph = "0.6.2"
rayon = "1.6.1"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0.89"

# [profile.release]
# codegen-units = 1 
# lto = true    
# strip = true  
# panic = "abort" 
